tooldef/org.eclipse.escet.tooldef.tests/tests/tchecker/asgn_dupl_var.tooldef
//////////////////////////////////////////////////////////////////////////////
// Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available
// under the terms of the MIT License which is available at
// https://opensource.org/licenses/MIT
//
// SPDX-License-Identifier: MIT
//////////////////////////////////////////////////////////////////////////////

int x, y, z;

while true:: x, x = 1, 2;

while true:: (x, y, z, (x, y)) = (1, 2, 3, (4, 5));
